--- a/Karis Lists/Base.lproj/Main.storyboard
+++ b/Karis Lists/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,188 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Karis_Lists" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XcX-Ee-KVa">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EAw-qL-WzH">
+                                        <rect key="frame" x="22" y="22" width="331" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="bdC-og-fmp"/>
+                                        </constraints>
+                                    </view>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hEM-YK-C15">
+                                        <rect key="frame" x="22" y="158" width="331" height="479"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="Now-Ip-asl">
+                                                <rect key="frame" x="0.0" y="28" width="331" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Now-Ip-asl" id="RlT-f7-ibW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="331" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="BYZ-38-t0r" id="0t6-86-T1S"/>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="CIt-6m-uEQ"/>
+                                        </connections>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9De-ge-qiI">
+                                        <rect key="frame" x="117" y="637" width="141" height="30"/>
+                                        <state key="normal" title="Add Ikea/Walmart     ">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="k84-Md-bcE" kind="show" id="I1v-uk-NpA"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nG-dM-4Qj">
+                                        <rect key="frame" x="256" y="637" width="82" height="30"/>
+                                        <state key="normal" title="Add Special">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="893-nt-P2L" kind="show" id="h4i-Ky-z2j"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FlX-NI-bD7">
+                                        <rect key="frame" x="34" y="637" width="66" height="30"/>
+                                        <state key="normal" title="Add Food">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="vSQ-os-U7w" kind="show" id="LnS-94-ha4"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="9De-ge-qiI" firstAttribute="leading" secondItem="FlX-NI-bD7" secondAttribute="trailing" constant="17" id="4zI-2U-obp"/>
+                                    <constraint firstItem="9De-ge-qiI" firstAttribute="centerX" secondItem="XcX-Ee-KVa" secondAttribute="centerX" id="5ox-78-bku"/>
+                                    <constraint firstItem="EAw-qL-WzH" firstAttribute="top" secondItem="XcX-Ee-KVa" secondAttribute="top" constant="22" id="8p6-f3-6W7"/>
+                                    <constraint firstItem="EAw-qL-WzH" firstAttribute="leading" secondItem="XcX-Ee-KVa" secondAttribute="leading" constant="22" id="Hva-6q-fD4"/>
+                                    <constraint firstAttribute="bottom" secondItem="hEM-YK-C15" secondAttribute="bottom" constant="30" id="L0A-bW-vSz"/>
+                                    <constraint firstItem="hEM-YK-C15" firstAttribute="top" secondItem="EAw-qL-WzH" secondAttribute="bottom" constant="8" id="P27-DE-FlT"/>
+                                    <constraint firstItem="4nG-dM-4Qj" firstAttribute="leading" secondItem="FlX-NI-bD7" secondAttribute="trailing" constant="156" id="XOn-nS-sMB"/>
+                                    <constraint firstAttribute="trailing" secondItem="EAw-qL-WzH" secondAttribute="trailing" constant="22" id="eI7-J6-d5f"/>
+                                    <constraint firstAttribute="bottom" secondItem="9De-ge-qiI" secondAttribute="bottom" id="fdV-Fp-6LH"/>
+                                    <constraint firstAttribute="bottom" secondItem="4nG-dM-4Qj" secondAttribute="bottom" id="oei-yS-0IU"/>
+                                    <constraint firstAttribute="trailing" secondItem="hEM-YK-C15" secondAttribute="trailing" constant="22" id="pGY-YH-WYn"/>
+                                    <constraint firstItem="hEM-YK-C15" firstAttribute="leading" secondItem="XcX-Ee-KVa" secondAttribute="leading" constant="22" id="pum-NF-CTa"/>
+                                    <constraint firstAttribute="bottom" secondItem="FlX-NI-bD7" secondAttribute="bottom" id="suo-fj-KnD"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XcX-Ee-KVa" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Lrs-zC-iJF"/>
+                            <constraint firstItem="XcX-Ee-KVa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Re0-iC-oUY"/>
+                            <constraint firstItem="XcX-Ee-KVa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="YZA-bc-aKD"/>
+                            <constraint firstItem="XcX-Ee-KVa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ZYY-W7-r3o"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="table" destination="hEM-YK-C15" id="UGA-iJ-zSS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="132" y="133.5832083958021"/>
+        </scene>
+        <!--AddFoodViewController-->
+        <scene sceneID="dPp-iC-hle">
+            <objects>
+                <viewController title="AddFoodViewController" id="vSQ-os-U7w" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fSD-SS-xVp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3c0-OV-wBZ">
+                                <rect key="frame" x="141.5" y="637" width="92" height="30"/>
+                                <state key="normal" title="Return to List"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="MA5-uY-kIh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3c0-OV-wBZ" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="X09-U3-EWm"/>
+                            <constraint firstItem="dxW-di-nDt" firstAttribute="bottom" secondItem="3c0-OV-wBZ" secondAttribute="bottom" id="a3m-uX-bez"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dxW-di-nDt"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZG1-9F-eK4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="799" y="134"/>
+        </scene>
+        <!--AddIkea-WalmartViewController-->
+        <scene sceneID="egs-gp-39C">
+            <objects>
+                <viewController title="AddIkea-WalmartViewController" id="k84-Md-bcE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="crH-XG-qla">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkJ-wh-Ou4">
+                                <rect key="frame" x="141.5" y="637" width="92" height="30"/>
+                                <state key="normal" title="Return to List"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="aeA-nY-c9Q"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="AkJ-wh-Ou4" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="Qbc-CS-mPo"/>
+                            <constraint firstItem="AkJ-wh-Ou4" firstAttribute="bottom" secondItem="BtO-EE-GYQ" secondAttribute="bottom" id="cvv-0E-avt"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BtO-EE-GYQ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nsv-wE-wBK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1433" y="135"/>
+        </scene>
+        <!--ADDSpecialViewController-->
+        <scene sceneID="dhT-92-Jzs">
+            <objects>
+                <viewController title="ADDSpecialViewController" id="893-nt-P2L" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fXx-52-D4T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RyK-wH-bgs">
+                                <rect key="frame" x="141.5" y="637" width="92" height="30"/>
+                                <state key="normal" title="Return to List"/>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="pV8-zb-ia8"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RyK-wH-bgs" firstAttribute="bottom" secondItem="GMv-X5-gWT" secondAttribute="bottom" id="h77-fv-8Xb"/>
+                            <constraint firstItem="RyK-wH-bgs" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="yrw-mH-NbP"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GMv-X5-gWT"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aCP-vH-UbB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2062" y="135"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="pV8-zb-ia8"/>
+    </inferredMetricsTieBreakers>
 </document>
