Laid out UI - wip

--- a/Karis Lists/Base.lproj/Main.storyboard
+++ b/Karis Lists/Base.lproj/Main.storyboard
@@ -124,11 +124,49 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="MA5-uY-kIh"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add A Food Item" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sPQ-AN-laC">
+                                <rect key="frame" x="90.5" y="137" width="194" height="33"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="194" id="fpM-fH-Axt"/>
+                                    <constraint firstAttribute="height" constant="33" id="u59-oy-WD5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What would you like to eat?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iK9-YC-Klo">
+                                <rect key="frame" x="72.5" y="207" width="230" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="2Xa-Zx-9xL"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PcK-aN-Lk5">
+                                <rect key="frame" x="156.5" y="264" width="62" height="30"/>
+                                <state key="normal" title="Add Item"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lvJ-jF-9bZ">
+                                <rect key="frame" x="79.5" y="378" width="216" height="30"/>
+                                <state key="normal" title="Delete all items PERMANENTLY">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.70103009059999999" green="0.87655845210000005" blue="0.15892414939999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="lvJ-jF-9bZ" firstAttribute="top" secondItem="PcK-aN-Lk5" secondAttribute="bottom" constant="84" id="1L0-us-X6v"/>
+                            <constraint firstItem="iK9-YC-Klo" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="5mm-N6-lNh"/>
+                            <constraint firstItem="PcK-aN-Lk5" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="7bz-LJ-gs6"/>
+                            <constraint firstItem="iK9-YC-Klo" firstAttribute="top" secondItem="sPQ-AN-laC" secondAttribute="bottom" constant="37" id="9EM-LO-71Q"/>
+                            <constraint firstItem="PcK-aN-Lk5" firstAttribute="top" secondItem="iK9-YC-Klo" secondAttribute="bottom" constant="27" id="MBF-mt-QAT"/>
                             <constraint firstItem="3c0-OV-wBZ" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="X09-U3-EWm"/>
+                            <constraint firstItem="sPQ-AN-laC" firstAttribute="top" secondItem="dxW-di-nDt" secondAttribute="top" constant="117" id="ZCG-Ki-k6w"/>
                             <constraint firstItem="dxW-di-nDt" firstAttribute="bottom" secondItem="3c0-OV-wBZ" secondAttribute="bottom" id="a3m-uX-bez"/>
+                            <constraint firstItem="sPQ-AN-laC" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="uVW-4X-0Vg"/>
+                            <constraint firstItem="lvJ-jF-9bZ" firstAttribute="centerX" secondItem="fSD-SS-xVp" secondAttribute="centerX" id="ugc-0q-X3c"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dxW-di-nDt"/>
                     </view>
@@ -152,11 +190,51 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="aeA-nY-c9Q"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E9Q-LN-oND">
+                                <rect key="frame" x="65.5" y="121" width="244" height="62"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="244" id="5Qg-sG-HBX"/>
+                                    <constraint firstAttribute="height" constant="62" id="dTj-ih-NhI"/>
+                                </constraints>
+                                <string key="text">Add Something from
+Ikea or Walmart</string>
+                                <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Or from somewhere close to them" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ACZ-Nh-H6f">
+                                <rect key="frame" x="65" y="208" width="245" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="245" id="lIM-4O-dko"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fS3-3X-ATE">
+                                <rect key="frame" x="156.5" y="265" width="62" height="30"/>
+                                <state key="normal" title="Add Item"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wjJ-Vw-RLK">
+                                <rect key="frame" x="79.5" y="379" width="216" height="30"/>
+                                <state key="normal" title="Delete all items PERMANENTLY">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.80833094630000002" green="0.85530609790000001" blue="0.9229746969" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="ACZ-Nh-H6f" firstAttribute="top" secondItem="E9Q-LN-oND" secondAttribute="bottom" constant="25" id="534-68-8Xe"/>
+                            <constraint firstItem="fS3-3X-ATE" firstAttribute="top" secondItem="ACZ-Nh-H6f" secondAttribute="bottom" constant="27" id="5rZ-Xl-ObW"/>
+                            <constraint firstItem="fS3-3X-ATE" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="Bip-qW-a4h"/>
+                            <constraint firstItem="E9Q-LN-oND" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="Ev0-YV-zFp"/>
+                            <constraint firstItem="ACZ-Nh-H6f" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="JAI-kI-K6J"/>
                             <constraint firstItem="AkJ-wh-Ou4" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="Qbc-CS-mPo"/>
+                            <constraint firstItem="wjJ-Vw-RLK" firstAttribute="centerX" secondItem="crH-XG-qla" secondAttribute="centerX" id="c4o-2J-9t1"/>
+                            <constraint firstItem="wjJ-Vw-RLK" firstAttribute="top" secondItem="fS3-3X-ATE" secondAttribute="bottom" constant="84" id="cmS-hs-TkS"/>
                             <constraint firstItem="AkJ-wh-Ou4" firstAttribute="bottom" secondItem="BtO-EE-GYQ" secondAttribute="bottom" id="cvv-0E-avt"/>
+                            <constraint firstItem="E9Q-LN-oND" firstAttribute="top" secondItem="BtO-EE-GYQ" secondAttribute="top" constant="101" id="kmk-LV-5Xe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BtO-EE-GYQ"/>
                     </view>
@@ -180,10 +258,48 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="pV8-zb-ia8"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Something Special" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8IR-cP-jQp">
+                                <rect key="frame" x="53" y="137" width="269" height="34"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="269" id="2gm-Y9-YbV"/>
+                                    <constraint firstAttribute="height" constant="34" id="zDd-fE-in3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Something you'd really like!" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rNK-II-Dw8">
+                                <rect key="frame" x="72.5" y="208" width="230" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="gOz-Lj-3N6"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1BI-W4-Zmx">
+                                <rect key="frame" x="158.5" y="265" width="58" height="30"/>
+                                <state key="normal" title="AddItem"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ypz-46-LSb">
+                                <rect key="frame" x="79.5" y="379" width="216" height="30"/>
+                                <state key="normal" title="Delete all items PERMANENTLY">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="0.93273804680000005" blue="0.054857880019999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="1BI-W4-Zmx" firstAttribute="top" secondItem="rNK-II-Dw8" secondAttribute="bottom" constant="27" id="5wL-zJ-1Ng"/>
+                            <constraint firstItem="8IR-cP-jQp" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="A6P-if-1XE"/>
+                            <constraint firstItem="rNK-II-Dw8" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="ec8-XV-JdV"/>
                             <constraint firstItem="RyK-wH-bgs" firstAttribute="bottom" secondItem="GMv-X5-gWT" secondAttribute="bottom" id="h77-fv-8Xb"/>
+                            <constraint firstItem="Ypz-46-LSb" firstAttribute="top" secondItem="1BI-W4-Zmx" secondAttribute="bottom" constant="84" id="iWa-SB-Ru1"/>
+                            <constraint firstItem="8IR-cP-jQp" firstAttribute="top" secondItem="GMv-X5-gWT" secondAttribute="top" constant="117" id="mvF-0z-07v"/>
+                            <constraint firstItem="1BI-W4-Zmx" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="mx3-xn-2h9"/>
+                            <constraint firstItem="Ypz-46-LSb" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="rwE-No-WmB"/>
+                            <constraint firstItem="rNK-II-Dw8" firstAttribute="top" secondItem="8IR-cP-jQp" secondAttribute="bottom" constant="37" id="rwW-X2-IfA"/>
                             <constraint firstItem="RyK-wH-bgs" firstAttribute="centerX" secondItem="fXx-52-D4T" secondAttribute="centerX" id="yrw-mH-NbP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="GMv-X5-gWT"/>
@@ -195,6 +311,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="pV8-zb-ia8"/>
+        <segue reference="MA5-uY-kIh"/>
     </inferredMetricsTieBreakers>
 </document>
